deployment-landingpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landingpage
spec:
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - landingpage
      - key: env
        operator: In
        values:
          - staging
  template:
    metadata:
      labels:
        app: landingpage
        env: staging
    spec:
      containers:
      - name: landingpage
        image: fajarsujai/landingpage
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: landingpage-service
spec:
  type: NodePort
  selector:
    app: landingpage
  ports:
  - port: 8010
    targetPort: 80
    protocol: TCP
