deployment-sosmed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sosmed
spec:
  selector:
    matchLabels:
      app: sosmed
  template:
    metadata:
      labels:
        app: sosmed
    spec:
      volumes:
        - name: config-sosmed-pod  #Volume untuk configmap
          configMap:
            name: configmap-sosmed
        # - name: pv-sosmed-storage
        #   persistentVolumeClaim:
        #     claimName: pvc-sosmed
      containers:
      - name: sosmed
        image: fajarsujai/sosmed
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-sosmed-pod
            mountPath: "/var/www/html/config.php"
            subPath: "config.php"
          # - name: pv-sosmed-storage
          #   mountPath: "/var/www/html"
---

apiVersion: v1
kind: Service
metadata:
  name: sosmed-service
spec:
  type: NodePort
  selector:
    app: sosmed
  ports:
  - port: 8020
    targetPort: 80
    protocol: TCP
