deployment-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        volumeMounts:
          - name: pv-wordpress-storage
            mountPath: /var/www/html
        ports:
        - containerPort: 80
      volumes:
        - name: pv-wordpress-storage
          persistentVolumeClaim:
            claimName: pvc-wordpress

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
  - port: 8030
    targetPort: 80
    protocol: TCP
