sp3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: fajarsujai.my.id
  rules:
  - host: prod-sujai.fajarsujai.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: landingpage-service
            port: 
              number: 8010
  - host: prod-pesbuk.fajarsujai.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sosmed-service
            port: 
              number: 8020
  - host: prod-blog.fajarsujai.my.id
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wordpress-service
            port: 
              number: 8030
